--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,7 +1,8 @@
 spring:
-  datasource:
-    url: jdbc:postgresql://192.168.1.64:5432/transactions
-    username: transactions
-    password: postgres
   flyway:
+    enabled: true
     baseline-on-migrate: true
+  datasource:
+    url: jdbc:postgresql://localhost:5432/postgres
+    username: postgres
+    password: postgres
