--- a/environment/docker-compose.db.yml
+++ b/environment/docker-compose.db.yml
@@ -7,5 +7,5 @@ services:
       POSTGRES_PASSWORD: "postgres"
     ports:
       - 5432:5432
-    volumes:
-      - c:/development/database/postgres/data:/var/lib/postgresql/data
+    # volumes:
+    #   - c:/development/database/postgres/data:/var/lib/postgresql/data
